# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  secret.env
.github/workflows/: hexlet-check.yml  my_workflows.yml  python-publish.yml  sonar-project.properties
task_manager/: rollbar_middleware.py  settings.py  urls.py  wsgi.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: tests.py  urls.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/labels/: index.html
task_manager/templates/tasks/: create.html  delete.html  update.html
task_manager/templates/users/: index.html
task_manager/users/: views.py
task_manager/users/migrations/: 0001_initial.py
