[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.1",
    "django>=6.0.2",
    "django-bootstrap5==24.3",
    "django-filter>=25.2",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-playwright>=0.7.2",
    "pytest-dotenv>=0.5.2", 
    "ruff>=0.15.1",
]

[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["task_manager"]
